[package]
name = "rs_service_cloud"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[build-dependencies]
chrono = "0.4.42"

[dependencies]
axum = "0.8.6"
# dechdev_rs = "0.1.15"
dotenvy = "0.15.7"
log = "0.4.28"
log4rs = "1.4.0"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "blocking", "rustls-tls"] }
