[package]
name = "rs_service_cloud"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[build-dependencies]
chrono = "0.4.44"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
dechdev_rs = "0.1.45"
dotenvy = "0.15.7"
log = "0.4.29"
log4rs = "1.4.0"
redis = { version = "1.0.4", features = ["tls-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
